[gd_scene load_steps=5 format=3 uid="uid://b63giumoaqmg2"]

[ext_resource type="FontFile" uid="uid://duujpyh00pie6" path="res://fonts/JetBrainsMono-Regular.ttf" id="2_0nabh"]
[ext_resource type="Script" uid="uid://cv1njefyljpik" path="res://scripts/interface/hotbar/hotbar_button.gd" id="2_h14t1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xevv8"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_oh147"]

[node name="ItemButton" type="Button"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -48.0
offset_right = 24.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(20, 36)
theme_override_styles/focus = SubResource("StyleBoxEmpty_xevv8")
flat = true
script = ExtResource("2_h14t1")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="InnerBorder" type="ColorRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="ItemIcon" type="TextureRect" parent="InnerBorder"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.071
anchor_top = -0.071
anchor_right = -0.071
anchor_bottom = -0.071
offset_left = 7.982
offset_top = 10.982
offset_right = 39.982
offset_bottom = 42.982
texture = SubResource("CompressedTexture2D_oh147")

[node name="ButtonLabel" type="Label" parent="InnerBorder"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.5
offset_top = -2.0
offset_right = 18.5
offset_bottom = 15.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_0nabh")
theme_override_font_sizes/font_size = 12
text = "ALT 0"
